# shakespeare_poet

./: .gitignore  AGENTS.md  ARCHITECTURE.md  INSTRUCTION.md  PROGRESS.md  README.md  pyproject.toml
data/: archaic_pronunciations.json
data/raw/: shakespeare_sample.txt
src/shpoet/: __init__.py
src/shpoet/api/: main.py  models.py  services.py  state.py
src/shpoet/chunking/: __init__.py  fragment_chunker.py  line_chunker.py  phrase_chunker.py  provenance.py
src/shpoet/common/: __init__.py  errors.py  signatures.py  types.py
src/shpoet/config/: logging.yaml  settings.py
src/shpoet/expander/: __init__.py  anchor_planner.py  expander.py  play_design_brief.py  validators.py
src/shpoet/features/: __init__.py  meter.py  nlp_context.py  phonetics.py  semantics.py  syllables.py  syntax.py  tier1_raw.py  tier2_derived.py  tier3_lazy.py
src/shpoet/ingest/: __init__.py  canon_index.py  normalize.py  source_loader.py
src/shpoet/learning/: __init__.py  replay_suite.py
src/shpoet/llm/: chooser.py  client.py  critic.py
src/shpoet/macro/: __init__.py  guidance.py  macro_graph.py  state_manager.py
src/shpoet/micro/: __init__.py  corpus_store.py  reuse_lock.py  transition_engine.py
src/shpoet/scoring/: __init__.py  scoring_engine.py  (+1 more)
tests/: test_api.py  test_chunking.py  test_expander.py  test_features.py  test_llm.py  test_macro.py  test_meter.py  test_phonetics.py  test_scoring.py  test_search.py  test_signatures.py  test_syllables.py  test_syntax.py  test_tier2_pipeline.py  test_transition_engine.py  test_vectorstore.py
tests/fixtures/: sample_lines.txt
(+23 files in other folders)
