[project]
name = "shpoet"
version = "0.1.0"
description = "Shakespearean Poet - quote-assembled 5-act plays"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "chromadb>=0.4.24",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

testpaths = ["tests"]
